add war buildable